# reussir

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE-MIT  README.md  README_NIX.md  cabal.project  flake.nix  fourmolu.yaml
crates/core/: Cargo.toml
crates/front/: Cargo.toml
crates/sema/: Cargo.toml
frontend/reussir-core/: --list-options  CHANGELOG.md  reussir-core.cabal
frontend/reussir-core/app/: Compiler.hs  Elab.hs  Main.hs
frontend/reussir-core/test/: Main.hs
frontend/reussir-core2/: reussir-core2.cabal
frontend/reussir-core2/app/: Compiler.hs  Elab.hs  FullElab.hs  Main.hs  SemiElab.hs
frontend/reussir-core2/test/: Main.hs
frontend/reussir-lsp/: CHANGELOG.md  reussir-lsp.cabal
frontend/reussir-lsp/app/: Main.hs
lib/Bridge/: Bridge.cpp  Bridge.cppm  CMakeLists.txt  JITEngine.cppm  Logging.cppm  RustCompiler.cppm
lib/Conversion/: CMakeLists.txt
lib/Conversion/AcquireDropExpansion/: AcquireDropExpansion.cpp  CMakeLists.txt
lib/Conversion/AttachNativeTarget/: AttachNativeTarget.cpp  CMakeLists.txt
lib/Conversion/BasicOpsLowering/: BasicOpsLowering.cpp  CABISignatureConversion.cpp  CMakeLists.txt  DbgInfoConversion.cpp
lib/Conversion/ClosureOutlining/: CMakeLists.txt  ClosureOutlining.cpp
lib/Conversion/CompilePolymorphicFFI/: CMakeLists.txt  CompilePolymorphicFFI.cpp
lib/Conversion/DropExpansion/: DropExpansion.cpp
lib/Conversion/IncDecCancelation/: CMakeLists.txt  IncDecCancelation.cpp
lib/Conversion/IncDecCancellation/: CMakeLists.txt  IncDecCancellation.cpp
lib/Conversion/InferVariantTag/: CMakeLists.txt  InferVariantTag.cpp
lib/Conversion/InvariantGroupAnalysis/: CMakeLists.txt  InvariantGroupAnalysis.cpp
lib/Conversion/RcCreateFusion/: CMakeLists.txt  RcCreateFusion.cpp
lib/Conversion/RcCreateSink/: CMakeLists.txt  RcCreateSink.cpp
lib/Conversion/RcDecrementExpansion/: RcDecrementExpansion.cpp
lib/Conversion/RegionPatterns/: CMakeLists.txt  RegionPatterns.cpp
lib/Conversion/SCFOpsLowering/: SCFOpsLowering.cpp
lib/Conversion/TRMCRecursionAnalysis/: CMakeLists.txt  TRMCRecursionAnalysis.cpp
lib/Conversion/TokenAllocation/: CMakeLists.txt  TokenAllocation.cpp
lib/Conversion/TokenInstantiation/: TokenInstantiation.cpp
lib/Conversion/TokenReuse/: CMakeLists.txt  TokenReuse.cpp
lib/Conversion/TypeConverter/: CMakeLists.txt  TypeConverter.cpp
lib/Conversion/UniqueCarryingRecursionAnalysis/: CMakeLists.txt  UniqueCarryingRecursionAnalysis.cpp
lib/Transformation/: CMakeLists.txt
lib/Transformation/IncDecCancellation/: CMakeLists.txt  IncDecCancellation.cpp
lib/Transformation/InferVariantTag/: CMakeLists.txt  InferVariantTag.cpp
lib/Transformation/InvariantGroupAnalysis/: CMakeLists.txt  InvariantGroupAnalysis.cpp
lib/Transformation/RcCreateFusion/: CMakeLists.txt  RcCreateFusion.cpp
lib/Transformation/RcCreateSink/: CMakeLists.txt  RcCreateSink.cpp
lib/Transformation/TRMCRecursionAnalysis/: CMakeLists.txt  TRMCRecursionAnalysis.cpp
lib/Transformation/TokenReuse/: CMakeLists.txt  TokenReuse.cpp
lib/Transformation/UniqueCarryingRecursionAnalysis/: CMakeLists.txt  UniqueCarryingRecursionAnalysis.cpp
runtime/: CMakeLists.txt  Cargo.toml
runtime/src/: alloc.rs  lib.rs  nullable.rs  panic.rs  rc.rs
runtime/src/collections/: string.rs  vec.rs
runtime/src/region/: rusty.rs
runtime/src/sync/: futex.rs  mod.rs
tests/integration/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/integration/compilation/: fib.rr  fib2.rr
tests/integration/conversion/: acquire_expansion.mlir  array_managed_elements.mlir  array_ops.mlir  array_ref_drop.mlir  array_tensor_view.mlir  array_tensor_view_e2e.mlir  array_unique_carrying.mlir  array_unique_carrying_recursion.mlir  array_unique_carrying_recursion_e2e.mlir  array_unique_tail_recursion.mlir  array_with_unique_view.mlir  array_with_unique_view_e2e.mlir  attach_native_target.mlir  basic_closure.mlir  closure_apply.mlir  closure_rc_ops.mlir  closure_uniqify.mlir  closure_uniqify_2.mlir  drop_expansion.mlir  free_token_at_end.mlir  inc-dec-cancellation.mlir  inc_dec_cancellation.mlir  inc_dec_cancellation_nested_scf.mlir  invariant_group_analysis.mlir  list_map.mlir  nested_polyffi.mlir  nullable_coerce.mlir  nullable_dispatch_ops.mlir  nullable_ops.mlir  option_like_ops.mlir  rc_assume_unique.mlir  rc_create_fused_lowering.mlir  rc_create_fusion.mlir  rc_create_sink.mlir  rc_dec_expansion.mlir  rc_is_unique.mlir  rc_ops.mlir  record_coerce.mlir  record_dispatch_ops.mlir  record_extract.mlir  (+28 more)
tests/integration/frontend/: closure.c  closure.rr  closure_call_expr.rr  closure_e2e.c  closure_e2e.rr  closure_multiplicity.c  closure_multiplicity.rr  closure_nested_capture.c  closure_nested_capture.rr  closure_struct_materialize.c  closure_struct_materialize.rr  ffi_combined.rr  ffi_export_new_syntax.c  ffi_export_new_syntax.rr  ffi_extern_struct_vec.rr  ffi_import_basic.c  ffi_import_basic.rr  ffi_import_basic_mlir.rr  ffi_import_template.rr  ffi_import_template_multi_generic.rr  ffi_polyffi_list_ownership.rr  ffi_polyffi_nested_types.rr  ffi_polyffi_vec_list.rr  fibonacci-generic.rr  fibonacci-shared.rr  fibonacci-struct.rr  fibonacci.c  fibonacci.rr  field_shorthand.rr  fn_lift.c  fn_lift.rr  huge_value_struct_call_and_return.c  huge_value_struct_call_and_return.rr  invalid_record.rr  issue_213_noop_deallocate_null.rr  list.rr  list_empty.rr  list_inc1.rr  list_reverse.rr  match_ctor_reconcile_keep_scrut_dec.rr  (+43 more)
tests/integration/repl/: nat_back_and_forth.repl  pattern_bool.repl  pattern_bool_nested.repl  pattern_enum_option.repl  pattern_enum_result.repl  pattern_int.repl  pattern_int_guard.repl  pattern_num_of_true.repl  polymorphic.repl  record.repl
tests/integration/sanitizer/: rbtree-asan.rr  rbtree-harness.c  rbtree-lsan-leak.rr  rbtree-msan.rr  rbtree-tsan.rr  rbtree2-harness.c
tests/unittest/: CMakeLists.txt  scanner.cpp  test.cppm  test_main.cpp
tests/unittest/cases/: aquisition.cpp  array.cpp  basic.cpp  rustc_invoke.cpp  scanner.cpp
tests/unittest/framework/: test.cppm  value.cppm
tool/reussir-opt/: CMakeLists.txt  main.cpp
(+485 files in other folders)
