[package]
name = "reussir-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
backtrace = { version = "0.3.75" }
hashbrown = { version = "0.16.0" }
mimalloc = { version = "0.1", features = ["v3"], optional = true }
num_enum = "0.7.4"
smallvec = "1.15.1"
stacker = { version = "0.1.21" }

[features]
default = ["mimalloc"]

[lib]
crate-type = ["dylib", "lib"]
