[package]
name = "reussir-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky = { version = "0.11.1", default-features = false }
rustc-hash = { version = "2.1.1", features = ["rand"] }
strum = { version = "0.27.1", features = ["derive"] }
ustr = "1.1.0"
rustc_apfloat = "0.2.3"
bumpalo = "3.19.0"
frizbee = "0.5.0"
thiserror = "2.0.12"
bitflags = "2.9.1"
