[package]
name = "reussir-front"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky = { version = "0.11.1", features = ["pratt", "lexical-numbers"] }
either = "1.15.0"
indexmap = "2.10.0"
lexical = { version = "7.0.4", default-features = false, features = [
    "format",
    "power-of-two",
    "parse-integers",
] }
logos = "0.15.0"
reussir-core = { path = "../core" }
rustc-hash = { version = "2.1.1", features = ["rand"] }
rustc_apfloat = "0.2.3"
smallvec = { version = "=2.0.0-alpha.11", features = ["specialization", "std"] }
strum = "0.27.1"
thiserror = "2.0.12"
ustr = "1.1.0"
