cabal-version:      3.14
name:               reussir-core
version:            0.1.0.0
license:            (Apache-2.0 OR MIT)
license-file:       LICENSE
author:             Schrodinger ZHU Yifan
maintainer:         i@zhuyi.fan
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Reussir.Core
        Reussir.Core.Data.Class
        Reussir.Core.Data.FP
        Reussir.Core.Data.Integral
        Reussir.Core.Data.String
        Reussir.Core.Data.Semi.Record
        Reussir.Core.Data.Semi.Type
        Reussir.Core.Data.Semi.Unification
        Reussir.Core.Data.Semi.Expr
        Reussir.Core.Data.Semi.Variable
        Reussir.Core.Data.Semi.Context
        Reussir.Core.Data.Semi.Function
        Reussir.Core.Data.Full.Context
        Reussir.Core.Data.Full.Function
        Reussir.Core.Data.Full.Type
        Reussir.Core.Data.Full.Expr
        Reussir.Core.Data.Full.Record
        Reussir.Core.Data.Full.Error
        Reussir.Core.Data.Lowering.Context
        Reussir.Core.Data.Operator
        Reussir.Core.Data.Generic
        Reussir.Core.Data.UniqueID
        Reussir.Core.Generic
        Reussir.Core.Class
        Reussir.Core.String
        Reussir.Core.Semi.Function
        Reussir.Core.Semi.Variable
        Reussir.Core.Semi.Type
        Reussir.Core.Semi.Unification
        Reussir.Core.Semi.Mangle
        Reussir.Core.Semi.Context
        Reussir.Core.Semi.Tyck
        Reussir.Core.Semi.FlowAnalysis
        Reussir.Core.Semi.Pretty
        Reussir.Core.Full.Record
        Reussir.Core.Full.Type
        Reussir.Core.Full.Context
        Reussir.Core.Full.Expr
        Reussir.Core.Full.Function
        Reussir.Core.Full.Conversion
        Reussir.Core.Full.Error
        Reussir.Core.Full.Pretty
        Reussir.Core.Lowering.Context
        Reussir.Core.Lowering.Debug
        Reussir.Core.Lowering.Function
        Reussir.Core.Lowering.Expr
        Reussir.Core.Lowering.Type
        Reussir.Core.Lowering.Record
        Reussir.Core.Lowering.Module
    build-depends:    base ^>=4.20.2.0,
                      reussir-bridge,
                      reussir-parser,
                      reussir-diagnostic,
                      reussir-codegen,
                      effectful,
                      log-effectful,
                      log-base,
                      text,
                      unordered-containers,
                      containers,
                      hashable,
                      xxhash-ffi,
                      scientific,
                      hashtables,
                      array,
                      ansi-terminal-types,
                      prettyprinter,
                      prettyprinter-ansi-terminal,
                      directory,
                      filepath,
                      bytestring,
                      text-builder-linear,
                      idn,
                      vector
    hs-source-dirs:   src
    default-language: GHC2024

executable reussir-elab
    import:           warnings
    main-is:          Elab.hs
    build-depends:
        base >=4.20.2.0,
        reussir-core,
        reussir-bridge,
        reussir-parser,
        reussir-diagnostic,
        optparse-applicative,
        text,
        effectful,
        log-effectful,
        log-base,
        megaparsec,
        prettyprinter,
        hashtables,
        prettyprinter-ansi-terminal
    hs-source-dirs:   app
    default-language: GHC2024

executable reussir-compiler
    import:           warnings
    main-is:          Compiler.hs
    build-depends:
        base ^>=4.20.2.0,
        reussir-core,
        reussir-parser,
        reussir-codegen,
        reussir-bridge,
        optparse-applicative,
        text,
        effectful,
        megaparsec,
        log-effectful,
        log-base
    hs-source-dirs:   app
    default-language: GHC2024

test-suite reussir-core-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Test.Reussir.Core.Generic
        Test.Reussir.Core.Class
        Test.Reussir.Core.String
        Test.Reussir.Core.Semi.Mangle
    build-depends:
        base ^>=4.20.2.0,
        reussir-core,
        tasty,
        tasty-hunit,
        containers,
        text,
        effectful,
        effectful-core,
        reussir-parser,
        hashtables,
        text-builder-linear
