cabal-version:      3.14
name:               reussir-core2
version:            0.1.0.0
license:            (Apache-2.0 OR MIT)
license-file:       LICENSE
author:             Schrodinger ZHU Yifan
maintainer:         i@zhuyi.fan
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Reussir.Core2
        Reussir.Core2.Data.Class
        Reussir.Core2.Data.FP
        Reussir.Core2.Data.Integral
        Reussir.Core2.Data.String
        Reussir.Core2.Data.Semi.Record
        Reussir.Core2.Data.Semi.Type
        Reussir.Core2.Data.Semi.Unification
        Reussir.Core2.Data.Semi.Expr
        Reussir.Core2.Data.Semi.Variable
        Reussir.Core2.Data.Semi.Context
        Reussir.Core2.Data.Semi.Function
        Reussir.Core2.Data.Semi
        Reussir.Core2.Data.Full.Context
        Reussir.Core2.Data.Full.Function
        Reussir.Core2.Data.Full.Type
        Reussir.Core2.Data.Full.Expr
        Reussir.Core2.Data.Full.Record
        Reussir.Core2.Data.Full.Error
        Reussir.Core2.Data.Full
        Reussir.Core2.Data.Operator
        Reussir.Core2.Data.Generic
        Reussir.Core2.Data.UniqueID
        Reussir.Core2.Generic
        Reussir.Core2.Class
        Reussir.Core2.Data
        Reussir.Core2.String
        Reussir.Core2.Semi.Function
        Reussir.Core2.Semi.Variable
        Reussir.Core2.Semi.Type
        Reussir.Core2.Semi.Unification
        Reussir.Core2.Semi.Mangle
        Reussir.Core2.Semi.Context
        Reussir.Core2.Semi.Tyck
        Reussir.Core2.Semi.FlowAnalysis
        Reussir.Core2.Semi.Pretty
        Reussir.Core2.Semi
        Reussir.Core2.Full.Record
        Reussir.Core2.Full.Type
        Reussir.Core2.Full.Context
        Reussir.Core2.Full.Expr
        Reussir.Core2.Full.Function
        Reussir.Core2.Full.Conversion
        Reussir.Core2.Full.Error
        Reussir.Core2.Full.Pretty
        Reussir.Core2.Full
    build-depends:    base ^>=4.20.2.0,
                      reussir-bridge,
                      reussir-parser,
                      reussir-diagnostic,
                      reussir-codegen,
                      effectful,
                      log-effectful,
                      log-base,
                      text,
                      unordered-containers,
                      containers,
                      hashable,
                      xxhash-ffi,
                      scientific,
                      hashtables,
                      array,
                      ansi-terminal-types,
                      prettyprinter,
                      prettyprinter-ansi-terminal,
                      directory,
                      filepath,
                      bytestring,
                      text-builder-linear,
                      idn,
                      vector
    hs-source-dirs:   src
    default-language: GHC2024

executable reussir-semi-elab
    import:           warnings
    main-is:          SemiElab.hs
    build-depends:
        base ^>=4.20.2.0,
        reussir-core2,
        reussir-bridge,
        reussir-parser,
        reussir-diagnostic,
        optparse-applicative,
        text,
        effectful,
        log-effectful,
        log-base,
        megaparsec,
        prettyprinter,
        hashtables,
        prettyprinter-ansi-terminal
    hs-source-dirs:   app
    default-language: GHC2024

executable reussir-full-elab
    import:           warnings
    main-is:          FullElab.hs
    build-depends:
        base ^>=4.20.2.0,
        reussir-core2,
        reussir-bridge,
        reussir-parser,
        reussir-diagnostic,
        optparse-applicative,
        text,
        effectful,
        log-effectful,
        log-base,
        megaparsec,
        prettyprinter,
        hashtables,
        prettyprinter-ansi-terminal
    hs-source-dirs:   app
    default-language: GHC2024

executable reussir-compiler2
    import:           warnings
    main-is:          Compiler.hs
    build-depends:
        base ^>=4.20.2.0,
        reussir-core2,
        reussir-parser,
        reussir-codegen,
        reussir-bridge,
        optparse-applicative,
        text,
        effectful,
        megaparsec,
        log-effectful,
        log-base
    hs-source-dirs:   app
    default-language: GHC2024

test-suite reussir-core2-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Test.Reussir.Core2.Generic
        Test.Reussir.Core2.Class
        Test.Reussir.Core2.String
        Test.Reussir.Core2.Semi.Mangle
    build-depends:
        base ^>=4.20.2.0,
        reussir-core2,
        tasty,
        tasty-hunit,
        containers,
        text,
        effectful,
        effectful-core,
        reussir-parser,
        hashtables,
        text-builder-linear
