cabal-version:      3.14
name:               reussir-lsp
version:            0.1.0.0
license:            (MIT OR Apache-2.0)
license-file:       LICENSE
author:             Schrodinger ZHU Yifan
maintainer:         i@zhuyi.fan
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Reussir.LSP.Handlers
        Reussir.LSP.Diagnostics
        Reussir.LSP.SemanticTokens
        Reussir.LSP.Hover
    build-depends:
        base >=4.20.2.0,
        lsp,
        lsp-types,
        text,
        megaparsec,
        containers,
        effectful,
        log-effectful,
        log-base,
        reussir-core,
        reussir-bridge,
        reussir-parser,
        reussir-diagnostic,
        hashtables,
        prettyprinter,
        prettyprinter-ansi-terminal,
        stm,
        strict-mutable-base,
        vector
    hs-source-dirs:   src
    default-language: GHC2024

executable reussir-lsp
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.20.2.0,
        reussir-lsp,
        lsp,
        lsp-types
    hs-source-dirs:   app
    default-language: GHC2024
