add_subdirectory(TypeConverter)
add_subdirectory(BasicOpsLowering)
add_subdirectory(SCFOpsLowering)
add_subdirectory(RegionPatterns)
add_subdirectory(DropExpansion)
add_subdirectory(RcDecrementExpansion)
add_subdirectory(InferVariantTag)
add_subdirectory(IncDecCancellation)
add_subdirectory(TokenInstantiation)
add_subdirectory(ClosureOutlining)
add_subdirectory(CompilePolymorphicFFI)
